--- a/my_list.html
+++ b/my_list.html
@@ -1,6 +1,6 @@
-"Bulbasaur"
-"Charmander"
-"Squirtle"
-"Pikachu"
-"Caterpie"
-"Piggeotto"
+<li>"Bulbasaur"</li>
+<li>"Charmander"</li>
+<li>"Squirtle"</li>
+<li>"Pikachu"</li>
+<li>"Caterpie"</li>
+<li>"Piggeotto"</li>
